--- a/src/locale/textos.pt.xlf
+++ b/src/locale/textos.pt.xlf
@@ -29,6 +29,9 @@
         <source>
     Numero: <x id="ICU" equiv-text="{numeroPessoas, plural, =0 {...} =1 {...} other {...}}"/>
 </source>
+<target>
+    Numero: <x id="ICU" equiv-text="{numeroPessoas, plural, =0 {...} =1 {...} other {...}}"/>
+</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/app.component.html</context>
           <context context-type="linenumber">14</context>
@@ -36,6 +39,8 @@
       </trans-unit>
       <trans-unit id="e08e567ec9e140fafe05908f241c113ea23ab69d" datatype="html">
         <source>{VAR_PLURAL, plural, =0 {ninguem } =1 {<x id="INTERPOLATION" equiv-text="{{numeroPessoas}}"/> pessoa } other {<x id="INTERPOLATION" equiv-text="{{numeroPessoas}}"/> pessoas } }</source>
+        <target>{VAR_PLURAL, plural, =0 {ninguem } =1 {<x id="INTERPOLATION" equiv-text="{{numeroPessoas}}"/> pessoa } other {<x id="INTERPOLATION" equiv-text="{{numeroPessoas}}"/> pessoas } }</target>
+
         <context-group purpose="location">
           <context context-type="sourcefile">app/app.component.html</context>
           <context context-type="linenumber">15</context>
@@ -45,6 +50,9 @@
         <source>
     Animal: <x id="ICU" equiv-text="{genero, select, f {...} m {...}}"/>
 </source>
+<target>
+    Animal: <x id="ICU" equiv-text="{genero, select, f {...} m {...}}"/>
+</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/app.component.html</context>
           <context context-type="linenumber">22</context>
@@ -52,6 +60,8 @@
       </trans-unit>
       <trans-unit id="2bdddacba86789a36b7439dbb7b9162d7cd7b499" datatype="html">
         <source>{VAR_SELECT, select, f {leoa } m {leão } }</source>
+        <target>{VAR_SELECT, select, f {leoa } m {leão } }</target>
+
         <context-group purpose="location">
           <context context-type="sourcefile">app/app.component.html</context>
           <context context-type="linenumber">23</context>
